# pizzaria-django-orm-fastapi

./: .env.template  .gitignore  README.md  config.py  django_setup.py  main.py  manage.py  pyproject.toml
pizzaria/: models.py  router.py  schemas.py
pizzaria/migrations/: 0001_initial.py
tests/: test_pizzaria.py
